<resources>
    <string name="app_name">MangaDoge</string>
    <string name="latest_chapters">Latest Releases</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_new_account_here">Register new account here</string>
    <string name="profile">Profile</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="want_to_upload_your_own_chapters_click_here">Want to upload your own chapters? Click here</string>
    <string name="email_here">Email here</string>
    <string name="chapter_number_here">Chapter number here</string>
</resources>