<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_marginStart="150dp"
    android:backgroundTint="@color/gray"
    android:background="@drawable/ic_launcher_background"
    android:orientation="vertical">

    <ImageView
        android:padding="16dp"
        android:id="@+id/profileImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/emptypfp3"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/profileEmailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/email_here"
        />

    <TextView
        android:padding="16dp"
        android:layout_marginTop="50dp"
        android:id="@+id/profileUploadTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_to_upload_your_own_chapters_click_here"
        />

</LinearLayout>